# tensorflow-cmake

./: README.md
cmake/modules/: FindTensorFlow.cmake
examples/resize/: opencv_version.cc
inference/cc/: CMakeLists.txt  CMakeLists_.txt  HumanAndBody.h  midiseg_cc.py  refer.py  refer.txt  run_infer.cc  run_infer_up.txt  segplay.cc
inference/cc/utils/: common.h  pafprocess.cpp  pafprocess.h
inference/cc_thread/: CalMovement.h  HumanMovementInfo.h  HumanMovmentInfo.h
inference/segplay/: CMakeLists.txt  midiseg_cc.py  segplay.cc
